--- a/tp-api/build.gradle
+++ b/tp-api/build.gradle
@@ -14,11 +14,18 @@ repositories {
 }
 
 dependencies {
-    // Apache Commons Lang package
+    // Core
     implementation 'org.apache.commons:commons-lang3:3.13.0'
-
-    // JUnit for testing
     testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
+
+
+    // Websocket
+    implementation 'jakarta.websocket:jakarta.websocket-api:2.1.0'
+    implementation 'org.eclipse.jetty.websocket:websocket-server:12.0.0'
+
+    // Logging
+    implementation 'org.slf4j:slf4j-api:2.0.9'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
 }
 
 application {
