--- a/tp-api/build.gradle
+++ b/tp-api/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     implementation 'org.eclipse.jetty.websocket:websocket-jakarta-client:11.0.15'
     implementation 'org.eclipse.jetty.websocket:websocket-servlet:11.0.15'
 
+    // Json
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
+
     // Logging
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
