--- a/.github/workflows/build-elm.yml
+++ b/.github/workflows/build-elm.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - 'main'
   pull_request:
+    types:
+        - synchronize
+        - opened
+        - reopened
 
 jobs:
   build:
