database init working

--- a/tp-api/build.gradle
+++ b/tp-api/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     // Logging
     implementation 'org.slf4j:slf4j-api:2.0.9'
     implementation 'org.slf4j:slf4j-simple:2.0.9'
+
+    // PSQL driver
+    implementation 'org.postgresql:postgresql:42.6.0'
 }
 
 application {
