--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -14,6 +14,20 @@ jobs:
   build:
     name: Build Java
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:17
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 3310
+          POSTGRES_DB: thirdplace
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U testuser"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - name: Checkout code
