--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -41,3 +41,12 @@ jobs:
 
       - name: Build with Gradle
         run: cd tp-api && sh ./gradlew build
+        continue-on-error: true
+
+      - name: Upload test reports
+        if: always()  # Ensures this runs even if tests fail
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-reports
+          path: tp-api/build/reports/tests/test/
+          retention-days: 2
