--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build with Gradle
         id: gradle_build
         run: | 
-          cd tp-api && sh ./gradlew build --info -PDB_BOOTSTRAP_PW=3310 -PDB_DATA_PATH="/usr/local/var/postgreSQL/17/data"
+          cd tp-api && sh ./gradlew test --info -DDB_BOOTSTRAP_PW=3310 -DDB_DATA_PATH="/usr/local/var/postgreSQL/17/data"
         continue-on-error: true  
       
       - name: Check Test Result
