--- a/.github/workflows/build-java.yml
+++ b/.github/workflows/build-java.yml
@@ -40,14 +40,14 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Gradle
-        id: gradle_build
+        id: gradle_test
         run: | 
           cd tp-api && sh ./gradlew test --info -DDB_BOOTSTRAP_PW=3310 -DDB_DATA_PATH="/usr/local/var/postgreSQL/17/data"
         continue-on-error: true  
       
       - name: Check Test Result
         run: |
-          if [ ${{ steps.gradle_build.outcome }} != success ]; then
+          if [ ${{ steps.gradle_test.outcome }} != success ]; then
             echo "TESTS_FAILED=true" >> $GITHUB_ENV
           else
             echo "TESTS_FAILED=false" >> $GITHUB_ENV
