--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -1,9 +1,20 @@
 {
   "dependencies": {
     "@chainsafe/libp2p-noise": "^16.1.0",
+    "@kiltprotocol/core": "^0.35.2",
+    "@kiltprotocol/did": "^0.35.2",
     "@libp2p/kad-dht": "^14.2.15",
     "@libp2p/peer-id": "^5.1.0",
     "@libp2p/webrtc": "^5.2.9",
+    "@polkadot/extension-dapp": "^0.58.7",
+    "eslint": "9.24.0",
     "libp2p": "^2.8.2"
+  },
+  "devDependencies": {
+    "vite": "^6.2.5"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
   }
 }
