--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -1,11 +1,16 @@
 {
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^14.1.1",
     "@chainsafe/libp2p-noise": "^16.1.0",
+    "@chainsafe/libp2p-yamux": "^7.0.1",
     "@kiltprotocol/core": "^0.35.2",
     "@kiltprotocol/did": "^0.35.2",
+    "@libp2p/identify": "^3.0.29",
     "@libp2p/kad-dht": "^14.2.15",
+    "@libp2p/mplex": "^11.0.35",
     "@libp2p/peer-id": "^5.1.0",
     "@libp2p/webrtc": "^5.2.9",
+    "@libp2p/websockets": "^9.2.10",
     "@polkadot/extension-dapp": "^0.58.7",
     "eslint": "9.24.0",
     "libp2p": "^2.8.2",
