--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -5,15 +5,19 @@
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@kiltprotocol/core": "^0.35.2",
     "@kiltprotocol/did": "^0.35.2",
+    "@libp2p/bootstrap": "^11.0.35",
+    "@libp2p/circuit-relay-v2": "^3.2.11",
     "@libp2p/identify": "^3.0.29",
     "@libp2p/kad-dht": "^14.2.15",
     "@libp2p/mplex": "^11.0.35",
     "@libp2p/peer-id": "^5.1.0",
+    "@libp2p/pubsub-peer-discovery": "^11.0.1",
     "@libp2p/webrtc": "5.2.12",
+    "@libp2p/webrtc-star": "^7.0.0",
     "@libp2p/websockets": "^9.2.10",
     "@polkadot/extension-dapp": "0.58.9",
     "eslint": "9.26.0",
-    "libp2p": "2.8.5",
+    "libp2p": "^2.8.5",
     "ngeohash": "^0.6.3"
   },
   "devDependencies": {
