relay server works local

--- a/tp-relay/Dockerfile
+++ b/tp-relay/Dockerfile
@@ -1,10 +1,16 @@
-FROM node:18
+FROM node:20
 
 WORKDIR /app
 
-COPY . .
+# Only copy package files first (for caching)
+COPY package.json package-lock.json ./
 
+# Install the dependencies
 RUN npm install
+
+# Copy the rest of the code (except whats in .dockerignore)
+# If we do this without installing first, we will end up with packages compiled for whatever OS the user is running instead of debian
+COPY . .
 
 EXPOSE 9090
 
