--- a/tp-relay/package.json
+++ b/tp-relay/package.json
@@ -5,6 +5,7 @@
         "@libp2p/websockets": "9.2.10",
         "@libp2p/webrtc": "5.2.12",
         "@libp2p/circuit-relay-v2": "^3.2.11",
+        "@libp2p/identify": "3.0.29",
         "@chainsafe/libp2p-noise": "16.1.3",
         "@chainsafe/libp2p-yamux": "7.0.1",
         "@chainsafe/libp2p-gossipsub": "14.1.1"
