erlay kinda working

--- a/tp-relay/Dockerfile
+++ b/tp-relay/Dockerfile
@@ -1,5 +1,14 @@
 FROM node:20
 
+# Install IPFS
+RUN curl -O https://dist.ipfs.tech/kubo/v0.25.0/kubo_v0.25.0_linux-amd64.tar.gz && \
+    tar -xvzf kubo_v0.25.0_linux-amd64.tar.gz && \
+    cd kubo && \
+    bash install.sh && \
+    ipfs --version
+
+ENV IPFS_PATH=/ipfs
+
 WORKDIR /app
 
 # Only copy package files first (for caching)
@@ -14,4 +23,4 @@ COPY . .
 
 EXPOSE 9090
 
-CMD ["node", "relay.js"]
+CMD bash -c "ipfs daemon & sleep 3 && node relay.js"
