--- a/tp-relay/package.json
+++ b/tp-relay/package.json
@@ -1,10 +1,10 @@
 {
     "type": "module",
     "dependencies": {
-        "libp2p": "2.8.5",
-        "@libp2p/websockets": "9.2.10",
-        "@libp2p/circuit-relay-v2": "^3.2.11",
-        "@libp2p/identify": "3.0.29",
+        "libp2p": "2.8.8",
+        "@libp2p/websockets": "9.2.13",
+        "@libp2p/circuit-relay-v2": "3.2.14",
+        "@libp2p/identify": "3.0.32",
         "@chainsafe/libp2p-noise": "16.1.3",
         "@chainsafe/libp2p-yamux": "7.0.1",
         "@chainsafe/libp2p-gossipsub": "14.1.1"
