Main creataccountslogin libp2pfront (#34)
## Description
Lol f it just merge this.
Ha jk this could be considered a pre-pre-alpha. Frontend kinda does
stuff and we have a relay.
Still need to get relay running on Akash and make the frontend actually
work with relay.
No more java

## Changes
- [x ] Feature added
- [ ] Bug fixed
- [x ] Refactoring
- [ ] Documentation/formatting update
- [ ] Other: _____

## Testing
_Include net new test files, or test cases for bugs or small features_

## Checklist
- [ ] Style Guidelines
- [ ] Clean build
- [ ] Code docs and formal docs updated if necessary

---------

Co-authored-by: smsovereign3 <43124720-smsovereign3@users.noreply.replit.com>

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,21 @@ elm-stuff/
 
 .gradle/
 .idea/
+launch.json
 settings.json
 build/
 
-bin/
+node_modules/
 
-room.js
-login.js
+# Elm/frontend files
+bin/
+deploy/
+tpapp.js
+
+# Relay files
+tp-ipfs/
+tp-relay-ipfs/
+
+# Rust files
+target/
+Cargo.lock
