--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+attached_assets/
+
 elm-stuff/
 
 .gradle/
@@ -16,7 +18,3 @@ tpapp.js
 # Relay files
 tp-ipfs/
 tp-relay-ipfs/
-
-# Rust files
-target/
-Cargo.lock
