--- a/.github/workflows/build-elm.yml
+++ b/.github/workflows/build-elm.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Build Elm project
         run: |
-          cd tp-frontend && elm make src/Room.elm --output=/dev/null
+          cd tp-frontend && elm make src/ThirdPlaceApp.elm --output=/dev/null
