--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -19,7 +19,8 @@
     "@polkadot/extension-dapp": "0.58.10",
     "eslint": "9.26.0",
     "libp2p": "2.8.8",
-    "ngeohash": "^0.6.3"
+    "ngeohash": "^0.6.3",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "vite": "^6.2.5"
