--- a/tp-frontend/tsconfig.json
+++ b/tp-frontend/tsconfig.json
@@ -6,8 +6,7 @@
     "rootDir": "src",
     "moduleResolution": "Node",
     "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "esModuleInterop": true
   },
   "include": ["src/**/*"]
 }
