--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -4,29 +4,23 @@
     "@chainsafe/libp2p-noise": "16.1.3",
     "@chainsafe/libp2p-yamux": "^7.0.1",
     "@kiltprotocol/core": "^0.35.2",
-    "@libp2p/circuit-relay-v2": "3.2.14",
-    "@libp2p/identify": "3.0.32",
-    "@libp2p/kad-dht": "^15.1.2",
-    "@libp2p/mplex": "11.0.38",
-    "@libp2p/peer-id": "^5.1.0",
-    "@libp2p/ping": "^2.0.32",
-    "@libp2p/pubsub-peer-discovery": "^11.0.1",
-    "@libp2p/tcp": "^10.1.13",
-    "@libp2p/webrtc": "5.2.15",
-    "@libp2p/webrtc-star": "^7.0.0",
-    "@libp2p/websockets": "9.2.13",
-    "@multiformats/multiaddr": "^12.4.0",
-    "@polkadot/extension-dapp": "0.58.10",
-    "eslint": "9.26.0",
-    "libp2p": "2.8.8",
+    "@libp2p/circuit-relay-v2": "3.2.15",
+    "@libp2p/identify": "3.0.33",
+    "@libp2p/ping": "2.0.33",
+    "@libp2p/webrtc": "5.2.16",
+    "@libp2p/websockets": "9.2.14",
+    "@multiformats/multiaddr": "12.4.1",
+    "@polkadot/extension-dapp": "0.59.2",
+    "libp2p": "2.8.9",
     "ngeohash": "^0.6.3",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "eslint": "9.28.0",
     "vite": "^6.2.5"
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "elm make src/ThirdPlaceApp.elm --output=tpapp.js && tsc && vite build"
   }
 }
