--- a/tp-frontend/tsconfig.json
+++ b/tp-frontend/tsconfig.json
@@ -6,7 +6,9 @@
     "rootDir": "src",
     "moduleResolution": "Node",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
