--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -16,7 +16,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "eslint": "9.28.0",
+    "eslint": "9.29.0",
     "vite": "^6.2.5"
   },
   "scripts": {
@@ -24,7 +24,7 @@
     "ebuild": "elm make src/ThirdPlaceApp.elm --output=tpapp.js",
     "tbuild": "tsc",
     "vbuild": "vite build",
-    "fbuild": "npm run ebuild && npm run tbuild && npm run vbuild",
+    "build": "npm run ebuild && npm run tbuild && npm run vbuild",
     "local": "npm run build && npm run dev"
   }
 }
