--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -3,6 +3,8 @@
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
     "@chainsafe/libp2p-noise": "16.1.3",
     "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@helia/http": "^2.1.2",
+    "@helia/unixfs": "^5.0.3",
     "@kiltprotocol/core": "^0.35.2",
     "@libp2p/circuit-relay-v2": "3.2.15",
     "@libp2p/identify": "3.0.33",
