--- a/tp-relay/package.json
+++ b/tp-relay/package.json
@@ -1,13 +1,18 @@
 {
     "type": "module",
     "dependencies": {
-        "libp2p": "2.8.8",
-        "@libp2p/websockets": "9.2.13",
-        "@libp2p/circuit-relay-v2": "3.2.14",
-        "@libp2p/identify": "3.0.32",
+        "@chainsafe/libp2p-gossipsub": "14.1.1",
         "@chainsafe/libp2p-noise": "16.1.3",
         "@chainsafe/libp2p-yamux": "7.0.1",
-        "@chainsafe/libp2p-gossipsub": "14.1.1"
+        "@helia/http": "^2.1.2",
+        "@helia/ipns": "^8.2.3",
+        "@helia/strings": "^4.0.6",
+        "@helia/unixfs": "^5.0.3",
+        "@libp2p/circuit-relay-v2": "3.2.16",
+        "@libp2p/identify": "3.0.34",
+        "@libp2p/websockets": "9.2.15",
+        "helia": "^5.4.2",
+        "libp2p": "2.8.10"
     },
     "scripts": {
         "dev": "sh ./dev_scripts/build_and_run.sh"
