--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -1,25 +1,25 @@
 {
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^14.1.1",
-    "@chainsafe/libp2p-noise": "16.1.3",
-    "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@chainsafe/libp2p-noise": "16.1.4",
+    "@chainsafe/libp2p-yamux": "7.0.4",
     "@helia/http": "^2.1.2",
     "@helia/unixfs": "^5.0.3",
     "@kiltprotocol/core": "^0.35.2",
-    "@libp2p/circuit-relay-v2": "3.2.15",
-    "@libp2p/identify": "3.0.33",
-    "@libp2p/ping": "2.0.33",
-    "@libp2p/webrtc": "5.2.16",
-    "@libp2p/websockets": "9.2.14",
-    "@multiformats/multiaddr": "12.4.1",
-    "@polkadot/extension-dapp": "0.59.2",
-    "libp2p": "2.8.9",
+    "@libp2p/circuit-relay-v2": "3.2.23",
+    "@libp2p/identify": "3.0.38",
+    "@libp2p/ping": "2.0.36",
+    "@libp2p/webrtc": "5.2.23",
+    "@libp2p/websockets": "9.2.18",
+    "@multiformats/multiaddr": "12.5.1",
+    "@polkadot/extension-dapp": "0.61.3",
+    "libp2p": "2.9.0",
     "ngeohash": "^0.6.3",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "eslint": "9.29.0",
-    "vite": "^6.2.5"
+    "eslint": "9.30.1",
+    "vite": "7.0.4"
   },
   "scripts": {
     "dev": "vite",
