--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -1,7 +1,11 @@
 {
-  "dependencies": {},
+  "dependencies": {
+    "helia": "5.5.0",
+    "@helia/json": "4.0.7"
+  },
   "devDependencies": {
-    "vite": "7.0.6"
+    "vite": "7.0.6",
+    "typescript": "^5.0.0"
   },
   "scripts": {
     "dev": "vite",
