Main epic1 1 ipfs (#46)
merges the branch for https://github.com/ldaIas/ThirdPlace/issues/40

--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,20 @@ attached_assets/
 
 elm-stuff/
 
-.gradle/
 .idea/
 launch.json
 settings.json
 build/
 
+.amazonq/
+
 node_modules/
+dist/
 
 # Elm/frontend files
 bin/
 deploy/
-tpapp.js
+main.js
 
 # Relay files
 tp-ipfs/
