--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -2,7 +2,18 @@
   "dependencies": {
     "helia": "5.5.0",
     "@helia/json": "4.0.7",
-    "multiformats": "^13.0.0"
+    "multiformats": "13.3.7",
+    "@orbitdb/core": "3.0.2",
+    "events": "^3.3.0",
+    "libp2p": "^2.2.0",
+    "@chainsafe/libp2p-gossipsub": "^14.1.0",
+    "@chainsafe/libp2p-noise": "^16.0.0",
+    "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@libp2p/bootstrap": "^11.0.8",
+    "@libp2p/websockets": "^9.0.8",
+    "@libp2p/webrtc": "^5.0.17",
+    "@libp2p/identify": "^3.0.8",
+    "@libp2p/circuit-relay-v2": "^2.1.4"
   },
   "devDependencies": {
     "vite": "7.0.6",
