--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
-    "helia": "5.5.0",
     "@helia/json": "4.0.7",
-    "multiformats": "^13.0.0"
+    "@orbitdb/core": "^3.0.2",
+    "events": "^3.3.0",
+    "helia": "5.5.0",
+    "multiformats": "13.3.7"
   },
   "devDependencies": {
+    "typescript": "^5.0.0",
     "vite": "7.0.6",
-    "typescript": "^5.0.0"
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "scripts": {
     "dev": "vite",
