--- a/tp-frontend/package.json
+++ b/tp-frontend/package.json
@@ -1,23 +1,23 @@
 {
   "dependencies": {
-    "helia": "5.5.0",
-    "@helia/json": "4.0.7",
-    "multiformats": "13.3.7",
-    "@orbitdb/core": "3.0.2",
-    "events": "^3.3.0",
-    "libp2p": "^2.2.0",
     "@chainsafe/libp2p-gossipsub": "^14.1.0",
     "@chainsafe/libp2p-noise": "^16.0.0",
     "@chainsafe/libp2p-yamux": "^7.0.1",
+    "@helia/json": "4.0.7",
     "@libp2p/bootstrap": "^11.0.8",
-    "@libp2p/websockets": "^9.0.8",
-    "@libp2p/webrtc": "^5.0.17",
+    "@libp2p/circuit-relay-v2": "3.2.23",
     "@libp2p/identify": "^3.0.8",
-    "@libp2p/circuit-relay-v2": "^2.1.4"
+    "@libp2p/webrtc": "^5.0.17",
+    "@libp2p/websockets": "^9.0.8",
+    "@orbitdb/core": "3.0.2",
+    "events": "^3.3.0",
+    "helia": "^5.5.0",
+    "libp2p": "^2.2.0"
   },
   "devDependencies": {
+    "typescript": "^5.0.0",
     "vite": "7.0.6",
-    "typescript": "^5.0.0"
+    "vite-plugin-node-polyfills": "^0.24.0"
   },
   "scripts": {
     "dev": "vite",
