--- a/tp-backend/build.gradle
+++ b/tp-backend/build.gradle
@@ -18,4 +18,11 @@ repositories {
 
 dependencies {
     implementation 'org.slf4j:slf4j-simple:2.0.9'
+    implementation 'jakarta.ws.rs:jakarta.ws.rs-api:3.1.0'
+    implementation 'org.glassfish.jersey.core:jersey-server:3.1.5'
+    implementation 'org.glassfish.jersey.containers:jersey-container-jetty-http:3.1.5'
+    implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.5'
+    implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.5'
+    implementation 'org.eclipse.jetty:jetty-server:12.0.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
 }
