--- a/tp-backend/build.gradle
+++ b/tp-backend/build.gradle
@@ -25,4 +25,7 @@ dependencies {
     implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.5'
     implementation 'org.eclipse.jetty:jetty-server:12.0.5'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1'
+    implementation 'org.postgresql:postgresql:42.7.1'
+    implementation 'com.zaxxer:HikariCP:5.1.0'
 }
